feat: manage whitelisted inbox aliases and collect other inbound mail
