# packages/api/src/projections.ts
@@ -35,6 +35,7 @@ export function projectMailboxSummary(mailbox: DatabaseMailboxSummary): MailboxS
     forwardTo: mailbox.forwardTo,
     forwardHtml: mailbox.forwardHtml,
     renderHtml: mailbox.renderHtml,
+    whitelisted: mailbox.whitelisted,
     id: mailbox.id,
     senderAlias: mailbox.senderAlias,
     updatedAt: isoDate(mailbox.updatedAt),
@@ -47,6 +48,7 @@ export function projectMailboxSettings(mailbox: DatabaseMailboxSettings): Mailbo
     forwardTo: mailbox.forwardTo,
     forwardHtml: mailbox.forwardHtml,
     renderHtml: mailbox.renderHtml,
+    whitelisted: mailbox.whitelisted,
     id: mailbox.id,
     senderAlias: mailbox.senderAlias,
     updatedAt: isoDate(mailbox.updatedAt),
